# i.il

./: .editorconfig  .eslintrc.cjs  .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/local-engine/: .env.example  .gitignore  main.py  pyproject.toml
apps/local-engine/cluster/: cluster.py  cluster_v2.py  embeddings.py  eval.py  tokens.py
apps/local-engine/config/: settings.py
apps/local-engine/db/: connection.py  migrate.py  schema.py
apps/local-engine/images/: cache.py  og_parser.py
apps/local-engine/ingest/: html_strip.py  normalize.py  rss.py
apps/local-engine/observe/: events.py  logger.py  metrics.py  report.py  server.py  why_not.py
apps/local-engine/publish/: facebook.py  queue.py
apps/local-engine/sources/: models.py  registry.py
apps/local-engine/summary/: categories.py  fact_extract.py  format.py  generate.py  glossary.py  guards.py  json_utils.py  llm_provider.py  ollama.py  prompt.py  wow_story.py
apps/local-engine/sync/: cf_sync.py
apps/local-engine/tests/: conftest.py  test_categories.py  test_cf_sync.py  test_cluster.py  test_cluster_v2.py  test_embeddings.py  test_errors_repo.py  test_fact_extract.py  test_fb_publish.py  test_format.py  test_glossary.py  test_guards.py  test_image_cache.py  test_llm_provider_llamacpp.py  test_logger.py  test_metrics.py  test_migrate.py  test_normalize.py  test_observe_server.py  test_og_parser.py  test_ollama.py  test_proof_mode.py  test_queue.py  test_registry.py  test_report.py  test_rss.py  test_runs_repo.py  test_settings.py  test_source_state.py  (+3 more)
(+168 files in other folders)
