[project]
name = "news-hub-local-engine"
version = "0.1.0"
description = "Local AI newsroom engine for News Hub (Variant 3 — Full Local Stack)"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "aiohttp>=3.9",
]

[project.scripts]
local-engine = "main:sync_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "db*", "sources*", "ingest*", "cluster*", "summary*", "images*", "publish*", "sync*", "observe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
